--- a/lab2/facebook/index.html
+++ b/lab2/facebook/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" href="https://static.xx.fbcdn.net/rsrc.php/yb/r/hLRJ1GG_y0J.ico">
+		<link rel="icon" href="ico.jpg">
 	</head>
 	<body>
 		<div class="globalContainer">
