--- a/дипломка/client/index.html
+++ b/дипломка/client/index.html
@@ -21,7 +21,7 @@
 					<input type="input" name="email" class="inputtext" placeholder="Email">
 				</div>
 				<div class="input">
-					<input type="input" name="password" class="inputtext" placeholder="Password">
+					<input type="password" name="password" class="inputtext" placeholder="Password">
 				</div>
 				<div class="btn"><button id="login-button">Log in</button></div>
 				<div class="no-acc">
