--- a/дипломка/client/main.html
+++ b/дипломка/client/main.html
@@ -11,6 +11,25 @@
 	<link rel="icon" href="ico.jpg">
 </head>
 <body>
-	You successfully logged in!
+    <div class="global-container">
+        <header>
+            <img src="logo2.png" class="logo">
+            <ul class="ul-header">
+                <li class="ul-element selected">Главная</li>
+                <li class="ul-element">Горящие туры</li>
+                <li class="ul-element">Страны</li>
+                <li class="ul-element">Туры</li>
+                <li class="ul-element">Отели</li>
+                <li class="ul-element">Круизы</li>
+                <li class="ul-element">O нас</li>
+                <li class="ul-element">Контакты</li>
+            </ul>
+        </header>
+        <div class="content-block">
+            <div class="find-tours">
+                <div class="find-tours-img"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
